major project changes/ first endpoint